@@ -18,6 +18,8 @@ Changelog for 1.3.21
 * Fixed internal server errors with date parsing (Chris T, 3546698)
 * Fixed "Directory Transversal Not Allowed w/fs_cssdir (Chris T, h/t Robert C)
 * Fixed customer/vendor cleared on ship/receive update (Chris T, 3548104)
+* Fixed insufficient permissions check in System/Defaults (Chris T)
+* Added missing ap_transaction_all role (Chris T, h/t Erik H)
 
 Changelog for 1.3.20
 * Fixes for es_AR translation, duplicate keys removed (Andres B)
